# tradeflex

./: package.json  vercel.json
.github/workflows/: ci.yml  deploy.yml  desktop-release.yml
course/: .env.example  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
course/.github/workflows/: ci.yml
course/docs/: domain-model.md  observability-plan.md  prd.md  roadmap.md  threat-model.md
course/docs/adr/: 0001-stack-lock.md  0002-admin-settings-api-keys.md  0003-reuse-scaffold.md  0004-brand-identity.md  0005-authoring-format.md  0006-macos-delivery.md  0007-notification-transport.md  0008-authorization-model.md
course/drizzle/: 0000_lovely_king_cobra.sql  0001_loving_random.sql  0002_nosy_odin.sql  0003_absent_shadow_king.sql  0004_lush_tana_nile.sql  0005_furry_ghost_rider.sql  0006_wise_hiroim.sql
course/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
course/src/: app.d.ts  hooks.server.ts
course/src/lib/blog/: posts.ts
course/src/lib/course/: manifest.ts
course/src/lib/notifications/: store.svelte.ts
course/src/lib/server/: auth.ts  crypto.ts  env.ts  flash.ts  (+2 more)
course/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte
desktop/: README.md  package.json
desktop/dist-shim/: index.html
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: main.rs
(+207 files in other folders)
